implement jwt auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/dnd
 spring.datasource.username=root
 spring.datasource.password=toor
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=changeme
+jwt.validity=1D
+
+jwt.allowed-endpoints=/auth/sign-in,/auth/sign-up
